--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
     display: flex;
     flex-direction: column;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
 }
 
 .top-items{
@@ -11,11 +13,36 @@ body{
     margin-right: 200px;
 }
 
+.content-2{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.button{
+    background-color: #3882F6;
+    width: fit-content;
+    height: fit-content;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 5px;
+}
+
+.container-1,
+.container-2,
+.footer{
+    background-color: #1f2937;
+    color: white;
+}
+
 .container-2{
     display: flex;
-    margin-left: 200px;
-    margin-right: 200px;
+    padding-left: 200px;
+    padding-right: 200px;
     gap: 60px;
+    padding-top: 150px;
+    padding-bottom: 150px;
 }
 
 .container-3{
@@ -28,10 +55,13 @@ body{
 }
 
 .container-4{
-    margin-left: 400px;
-    margin-right: 400px;
+    padding-left: 400px;
+    padding-right: 400px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     display: flex;
     flex-direction: column;
+    background-color: #e5e7eb;
 }
 
 .container-5{
@@ -61,15 +91,26 @@ body{
 
 .items{
     display: flex;
-    gap: 20px;
+    gap: 50px;
+    margin-bottom: 100px;
 }
 
 .card {
-    width: 120px;
-    height: 120px;                 
+    width: 150px;
+    height: 150px;                 
     border: 1px solid #3882F6;        
     border-radius: 10px;
   }
+
+.card-information{
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+}  
+
+.description{
+    text-align: center;
+}
   
 
 .links{
@@ -86,4 +127,9 @@ body{
 .content{
     display: flex;
     flex-direction: column;
+}
+
+.main-hero{
+    font-size: 48px;
+    font-weight: 900;
 }
