--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i');
+
 body{
     display: flex;
     flex-direction: column;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .top-items{
@@ -16,17 +18,27 @@ body{
 .content-2{
     padding-top: 50px;
     padding-bottom: 50px;
+    font-weight: bold;
+    font-size: 25px;
 }
 
 .button{
     background-color: #3882F6;
     width: fit-content;
     height: fit-content;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    border-radius: 5px; 
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.header{
+    font-weight: bold;
+    font-size: 24px;
+    color: #f9faf8;
 }
 
 .container-1,
@@ -67,26 +79,52 @@ body{
 .container-5{
     margin-left: 200px;
     margin-right: 200px;
+    padding: 100px;
 }
 
 .action{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #3882F6;
+    background-color: #3882F6;  
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 150px;
+    padding-right: 150px;
+    border-radius: 10px;
+    color: white;
+}
+
+.action.button{
+    border: 2px solid white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    border-radius: 5px; 
+    margin-top: 10px;
+    font-weight: bold;
 }
 
 .footer{
     display: flex;
     justify-content: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .quote{
-    text-align: center;
+    text-align: left;
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 300;
+    font-style: italic;
 }
 
 .author{
     text-align: right;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .items{
@@ -96,32 +134,46 @@ body{
 }
 
 .card {
-    width: 150px;
-    height: 150px;                 
-    border: 1px solid #3882F6;        
+    width: 160px;
+    height: 160px;                 
+    border: 4px solid #3882F6;        
     border-radius: 10px;
   }
 
 .card-information{
     display: flex;
     flex-direction: column;
-    width: 150px;
+    width: 160px;
 }  
 
 .description{
     text-align: center;
+    margin-top: 10px;
 }
   
 
 .links{
     display: flex;
     gap: 30px;
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.second-hero{
+    font-size: 18px;
+    color: #e5e7eb;
 }
 
 .imagem{
     background-color: gray;
     width: 600px;
     height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: #f9faf8;
+    font-size: 40px;
 }
 
 .content{
